perf: optimize stream extraction latency with 3.5s hard timeout and 100% parallel racing